--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ before_install:
   - java -version
   - docker pull couchbase
   - docker run -d --name db -p 8091-8094:8091-8094 -p 11210:11210 couchbase
+  - echo docker-machine ip db
   - curl -v -X POST http://localhost:8091/pools/default -d memoryQuota=300 -d indexMemoryQuota=300
   - curl -v http://localhost:8091/node/controller/setupServices -d 'services=kv%2Cn1ql%2Cindex'
   - curl -v -X POST http://localhost:8091/settings/web -d port=8091 -d username=Administrator -d password=password
