Couchbase host passed as parameter in travis file

--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -8,8 +8,7 @@ spring:
         active: #spring.profiles.active#
 couchbase:
     hosts:
-      - 127.0.0.1
-      - localhost
+      - ${COUCHBASEHOST}
     bucket: default
     password:
 
