--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ before_install:
   - java -version
   - docker pull couchbase
   - docker run -d --name db -p 8091-8094:8091-8094 -p 11210:11210 couchbase
+  - docker wait db
   - export COUCHBASEHOST=$(docker inspect --format '{{ .NetworkSettings.IPAddress }}' "db")
   - curl -v -X POST http://$COUCHBASEHOST:8091/pools/default -d memoryQuota=300 -d indexMemoryQuota=300
   - curl -v http://$COUCHBASEHOST:8091/node/controller/setupServices -d 'services=kv%2Cn1ql%2Cindex'
