--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,10 @@ before_install:
   - java -version
   - docker pull couchbase
   - docker run -d --name db -p 8091-8094:8091-8094 -p 11210:11210 couchbase
-  - sleep 90
+  - sleep 60
   - export COUCHBASEHOST=$(docker inspect --format '{{ .NetworkSettings.IPAddress }}' "db")
-  - curl -v -X POST http://$COUCHBASEHOST:8091/pools/default -d memoryQuota=300 -d indexMemoryQuota=300
-  - curl -v http://$COUCHBASEHOST:8091/node/controller/setupServices -d 'services=kv%2Cn1ql%2Cindex'
   - curl -v -X POST http://$COUCHBASEHOST:8091/settings/web -d port=8091 -d username=Administrator -d password=password
+  - curl -X POST -u Administrator:password -d name=default -d ramQuotaMB=256 -d authType=sasl -d replicaNumber=0 http://$COUCHBASEHOST:8091/pools/default/buckets
 script:
   - ./mvnw clean
   - ./mvnw test -DCOUCHBASEHOST=$COUCHBASEHOST
