--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
             <version>1.10</version>
         </dependency>
         <dependency>
+            <groupId>com.cronutils</groupId>
+            <artifactId>cron-utils</artifactId>
+            <version>5.0.5</version>
+        </dependency>
+        <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>${assertj-core.version}</version>
