--- a/src/test/resources/config/application-travis.yml
+++ b/src/test/resources/config/application-travis.yml
@@ -5,14 +5,18 @@ spring:
         # The commented value for `active` can be replaced with valid Spring profiles to load.
         # Otherwise, it will be filled in by maven when building the WAR file
         # Either way, it can be overridden by `--spring.profiles.active` value passed in the commandline or `-Dspring.profiles.active` set in `JAVA_OPTS`
-        active: #spring.profiles.active#
+        active: travis
 couchbase:
     hosts:
-      - 127.0.0.1
+      - ${COUCHBASEHOST}
     bucket: default
     password:
 
 server:
     port: 8080
+
+security:
+    basic:
+        enabled: false
 
 application:
