--- a/pom.xml
+++ b/pom.xml
@@ -56,9 +56,10 @@
         <assertj-core.version>3.5.2</assertj-core.version>
         <power-mock-version>1.6.6</power-mock-version>
         <metrics.version>3.2.1</metrics.version>
-        <jackson-datatype-jsr310.version>2.8.7</jackson-datatype-jsr310.version>
         <cron-utils.version>5.0.5</cron-utils.version>
         <commons-codec.version>1.10</commons-codec.version>
+        <joda-time.version>2.9.7</joda-time.version>
+        <jackson-datatype-joda.version>2.4.0</jackson-datatype-joda.version>
     </properties>
 
     <dependencies>
@@ -113,9 +114,15 @@
             <version>${metrics.version}</version>
         </dependency>
         <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>${joda-time.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
-            <artifactId>jackson-datatype-jsr310</artifactId>
-            <version>${jackson-datatype-jsr310.version}</version>
+            <artifactId>jackson-datatype-joda</artifactId>
+            <version>${jackson-datatype-joda.version}</version>
         </dependency>
 
         <dependency>
